tree-sitter-elps/test/corpus/comments.txt
================================================================================
Line comment
================================================================================

; this is a comment

---

(source_file
  (comment))

================================================================================
Double semicolon comment
================================================================================

;; this is a comment

---

(source_file
  (comment))

================================================================================
Comment after expression
================================================================================

42 ; the answer

---

(source_file
  (integer)
  (comment))

================================================================================
Hashbang
================================================================================

#!/usr/bin/env elps
(+ 1 2)

---

(source_file
  (hashbang)
  (list
    (symbol)
    (integer)
    (integer)))

================================================================================
Multiple comments
================================================================================

; first comment
; second comment
42

---

(source_file
  (comment)
  (comment)
  (integer))
