tree-sitter-elps/test/corpus/lists.txt
================================================================================
Simple list
================================================================================

(+ 1 2)

---

(source_file
  (list
    (symbol)
    (integer)
    (integer)))

================================================================================
Nested list
================================================================================

(+ (* 2 3) (- 4 1))

---

(source_file
  (list
    (symbol)
    (list
      (symbol)
      (integer)
      (integer))
    (list
      (symbol)
      (integer)
      (integer))))

================================================================================
Bracket list
================================================================================

[1 2 3]

---

(source_file
  (bracket_list
    (integer)
    (integer)
    (integer)))

================================================================================
Empty bracket list
================================================================================

[]

---

(source_file
  (bracket_list))

================================================================================
Mixed brackets and parens
================================================================================

(list [1 2] [3 4])

---

(source_file
  (list
    (symbol)
    (bracket_list
      (integer)
      (integer))
    (bracket_list
      (integer)
      (integer))))

================================================================================
Deeply nested
================================================================================

(a (b (c (d))))

---

(source_file
  (list
    (symbol)
    (list
      (symbol)
      (list
        (symbol)
        (list
          (symbol))))))
