tree-sitter-elps/test/corpus/literals.txt
================================================================================
Integers
================================================================================

42

---

(source_file
  (integer))

================================================================================
Negative integer
================================================================================

-7

---

(source_file
  (integer))

================================================================================
Float with decimal
================================================================================

3.14

---

(source_file
  (float))

================================================================================
Float with exponent
================================================================================

1e10

---

(source_file
  (float))

================================================================================
Float with decimal and exponent
================================================================================

2.5e-3

---

(source_file
  (float))

================================================================================
Negative float
================================================================================

-0.5

---

(source_file
  (float))

================================================================================
Octal integer
================================================================================

#o77

---

(source_file
  (octal_integer))

================================================================================
Octal integer uppercase
================================================================================

#O12

---

(source_file
  (octal_integer))

================================================================================
Hex integer
================================================================================

#xFF

---

(source_file
  (hex_integer))

================================================================================
Hex integer uppercase
================================================================================

#XAB

---

(source_file
  (hex_integer))

================================================================================
Simple string
================================================================================

"hello world"

---

(source_file
  (string))

================================================================================
String with escapes
================================================================================

"line1\nline2\ttab"

---

(source_file
  (string))

================================================================================
Empty string
================================================================================

""

---

(source_file
  (string))

================================================================================
Raw string
================================================================================

"""hello "world" here"""

---

(source_file
  (raw_string))

================================================================================
Nil
================================================================================

()

---

(source_file
  (nil))

================================================================================
Boolean true
================================================================================

true

---

(source_file
  (symbol))

================================================================================
Boolean false
================================================================================

false

---

(source_file
  (symbol))
