tree-sitter-elps/test/corpus/quotes.txt
================================================================================
Quoted symbol
================================================================================

'foo

---

(source_file
  (quote
    (symbol)))

================================================================================
Quoted list
================================================================================

'(1 2 3)

---

(source_file
  (quote
    (list
      (integer)
      (integer)
      (integer))))

================================================================================
Quoted nil
================================================================================

'()

---

(source_file
  (quote
    (nil)))

================================================================================
Function quote
================================================================================

#'my-func

---

(source_file
  (function_quote
    (symbol)))

================================================================================
Function quote qualified
================================================================================

#'math:abs

---

(source_file
  (function_quote
    (qualified_symbol)))

================================================================================
Expr shorthand
================================================================================

#^(+ 1 %)

---

(source_file
  (expr_shorthand
    (list
      (symbol)
      (integer)
      (symbol))))

================================================================================
Nested quotes
================================================================================

'('foo)

---

(source_file
  (quote
    (list
      (quote
        (symbol)))))
