tree-sitter-elps/test/corpus/symbols.txt
================================================================================
Plain symbol
================================================================================

foo

---

(source_file
  (symbol))

================================================================================
Symbol with special chars
================================================================================

empty?

---

(source_file
  (symbol))

================================================================================
Symbol with bang
================================================================================

set!

---

(source_file
  (symbol))

================================================================================
Symbol with hyphens
================================================================================

my-long-name

---

(source_file
  (symbol))

================================================================================
Operator symbol
================================================================================

+

---

(source_file
  (symbol))

================================================================================
Qualified symbol
================================================================================

math:abs

---

(source_file
  (qualified_symbol))

================================================================================
Keyword
================================================================================

:else

---

(source_file
  (keyword))

================================================================================
Keyword with hyphens
================================================================================

:key-name

---

(source_file
  (keyword))

================================================================================
Formals markers as symbols
================================================================================

(&optional x &rest y &key z)

---

(source_file
  (list
    (symbol)
    (symbol)
    (symbol)
    (symbol)
    (symbol)
    (symbol)))
